# 3sem_25

./: Makefile  Readme.md  chart  result.md
headers/: barterer.h  cmd.h  common.h  duplex_pipe.h  fifo_send.h  message_queue_send.h  montecarlo.h  msg_queue_send.h  shared_mem_send.h  shared_memory_send.h
homeworks/hw1_ShellWrapper/: run
homeworks/hw2_FullDuplexPipe/: .gitignore  CMakeLists.txt  callgrind.out.25835  callgrind.out.25836  run
homeworks/hw2_FullDuplexPipe/include/: FullDuplexPipe.hpp
homeworks/hw2_FullDuplexPipe/src/: Pipe.cpp  main.cpp
homeworks/hw3_ComparingMethods/: .env  Makefile  README.md  new_file.txt
homeworks/hw3_ComparingMethods/include/: Fifo.hpp  MsgSysV.hpp  ShmSysV.hpp  Utils.hpp
homeworks/hw3_ComparingMethods/src/: fifo.cpp  histo.py  mq_client.c  mq_server.c  mq_sysv.cpp  shm_sysv.cpp
homeworks/hw4_MonteCarlo/: .gitignore  CMakeLists.txt  graph.py
homeworks/hw4_MonteCarlo/src/: main.cpp
homeworks/hw5_Signals/: .env  CMakeLists.txt  file.txt
homeworks/hw5_Signals/include/: Signal.hpp
homeworks/hw5_Signals/src/: main.cpp  signal.cpp
homeworks/hw6_Demon/: .env  CMakeLists.txt
homeworks/hw6_Demon/src/: listdir.cpp  main.cpp
homeworks/hw8_NetworkMonte/: .env  .gitignore
homeworks/hw8_NetworkMonte/include/: Client.hpp  Server.hpp  cliver.hpp
homeworks/hw8_NetworkMonte/src/: client.cpp  server.cpp  tcp_client.cpp  tcp_server.cpp
hw3/: readme.md
hw3/data/: data.xlsx
hw3/fifo/: common.h  makefile  rcv.c  snd.c
hw3/msg/: common.h  makefile  rcv.c  snd.c
hw3/shm/: common.c  common.h  makefile  rcv.c  snd.c
hw4/: A.c  B.c  Makefile  readme.md
hw4/data/: data.ods
hw5/: Makefile  common.h  rcv.c  readme.md  snd.c
hw6/: client.c  main.c  makefile  readme.md
hw6/include/: daemon.h  fifo.h  process.h
hw6/src/: daemon.c  fifo.c  process.c
hw6/test/: prog
hw6/test2/: 1.txt  test.c
sem_1/: hw1.c  hw1.cpp  my_fish  my_fish.c  sem_1.c  sem_1.cpp  shell_wrapper.c
sem_1/Kotlyarov_solution_sem1/: CMakeLists.txt
sem_1/Kotlyarov_solution_sem1/headers/: parse_cmd.h
sem_1/Kotlyarov_solution_sem1/libs/Dynamic_array/: Dynamic_array_funcs.h
sem_1/Kotlyarov_solution_sem1/src/: main.c  parse_cmd.c  test  test.c  wait  wait.c
sem_1/hw1_shell_wrapper/: makefile
sem_1/hw1_shell_wrapper/include/: shell_wrapper.h
sem_1/hw1_shell_wrapper/src/: main.c  shell_wrapper.c
sem_2/: full_duplex_pipe.c
sem_2/Kotlyarov_solution_sem2/: CMakeLists.txt  run.sh
sem_2/Kotlyarov_solution_sem2/headers/: duplex_pipe.h
sem_2/Kotlyarov_solution_sem2/src/: duplex_pipe.c  main.c
sem_2/examples/: imennovanniy_pipe.c
sem_2/hw2_full_duplex_pipe/: README.md  duplex_pipe  makefile
sem_2/hw2_full_duplex_pipe/include/: pipe.h
sem_2/hw2_full_duplex_pipe/src/: main.c  pipe.c
sem_3/Kotlyarov_solution_sem3/: CMakeLists.txt  README.md
sem_3/Kotlyarov_solution_sem3/headers/: Transmission_funcs_test.h
sem_3/Kotlyarov_solution_sem3/src/: FIFO_transmission_main.c  SYS_V_mq_main.c  SYS_V_shm_main.c  Test_main.c  Transmission_funcs_test.c
sem_3/examples/: a.out  mq_server.c
sem_3/hw3_ipc_benchmark/: README.md  ipc_benchmark  makefile
sem_3/hw3_ipc_benchmark/include/: common.h  fifo_transfer.h  mq_transfer.h  shm_transfer.h
sem_3/hw3_ipc_benchmark/src/: fifo_transfer.c  main.c  mq_transfer.c  shm_transfer.c  timing.c
sem_4/Kotlyarov_solution_sem4/: CMakeLists.txt  README.md
sem_4/Kotlyarov_solution_sem4/headers/: Monte_Carlo_integration.h  generate_and_count_points.h
sem_4/Kotlyarov_solution_sem4/src/: Monte_Carlo_integration.c  generate_and_count_points.c  make_graph.py  make_log_graph.py  make_sub_graph.py
sem_4/hw4-monte-karlo/: README.md  makefile  program_a.c  program_b.c
sources/: barterer .c  barterer.c  cmd.c  common.c  common.h  duplex_pipe.c  fifo_send.c  main.c  main_fifo.c  main_message_queue.c  main_shared_memory.c  main_shm.c  message_queue_send.c  montecarlo.c  msg_queue_send.c  provider.c  reciever.c  sender.c  shared_mem_send.c  shared_memory_send.c
task_5/Kotlyarov_solution_task5/: CMakeLists.txt  README.md
task_5/Kotlyarov_solution_task5/headers/: handlers.h
task_5/Kotlyarov_solution_task5/src/: GetFileSize.c  handlers.c  main.c
task_5/hw5_signals/: file_transfer.c  makefile
task_6/Kotlyarov_solution_task6/: CMakeLists.txt  README.md
task_6/Kotlyarov_solution_task6/headers/: Daemon_config.h  backup_funcs.h  command_handler.h  maps_diff.h  monitor_modes.h  parse_args.h  parse_maps.h
task_6/Kotlyarov_solution_task6/libs/Dynamic_array/: Dynamic_array_funcs.c  Dynamic_array_funcs.h
task_6/Kotlyarov_solution_task6/libs/Get_file_size/: GetFileSize.c  GetFileSize.h
task_6/Kotlyarov_solution_task6/src/: backup_func.c  backup_funcs.c  command_handler.c  main.c  maps_diff.c  monitor_modes.c  parse_args.c  parse_maps.c
task_7/Kotlyarov_solution_task7/: CMakeLists.txt  README.md
task_7/Kotlyarov_solution_task7/headers/: Debug_printf.h  client_funcs.h  client_server_cfg.h  fifo_utils.h  server_funcs.h  thread_utils.h
task_7/Kotlyarov_solution_task7/libs/Check_flags/: Check_r_w_flags.c  Check_r_w_flags.h
task_7/Kotlyarov_solution_task7/libs/Dynamic_array/: Dynamic_array_funcs.h
task_7/Kotlyarov_solution_task7/src/: client.c  client_funcs.c  fifo_utils.c  server.c  server_funcs.c  thread_utils.c
task_7/Kotlyarov_solution_task7/tests/: test_multiple_clients.c
text/: text
